src/java/CCALParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CCALParser.java */
import java.io.*;

    public class CCALParser/*@bgen(jjtree)*/implements CCALParserTreeConstants, CCALParserConstants {/*@bgen(jjtree)*/
  protected static JJTCCALParserState jjtree = new JJTCCALParserState();
        public static SymbolTable symbolTable = new SymbolTable();
        // unless changed elsewhere scope is global
        public static String scope = "global";

        public static void main(String [] args) {
        CCALParser parser;

        if(args.length == 0) {
            System.out.println("CCAL Parser: Reading from standard input...");
            parser = new CCALParser(System.in);
        }

        else if(args.length == 1) {
            System.out.println("CCAL Parser: Reading from file " + args[0] + " ...");

            try {
                parser = new CCALParser(new java.io.FileInputStream(args[0]));
            }

            catch(java.io.FileNotFoundException e) {
                System.out.println("CCAL Parser: File " + args[0] + " not found");
                return;
            }
        }

        else {
            System.out.println("CCAL Parser: Usage is one of: ");
            System.out.println("             java CCALParser < inputfile");
            System.out.println("OR");
            System.out.println("             java CCALParser inputfile");
            return;
        }

        try {
            // Print AST
            System.out.println("ABSTRACT SYNTAX TREE");
            SimpleNode root = parser.Prog();
            root.dump("");
            System.out.println();

            // Print Symbol Table
            System.out.println("SYMBOL TABLE");
            symbolTable.printSymbolTable();

            System.out.println();
            // Semantic Analysis
            SemanticAnalyser semanticAnalyser = new SemanticAnalyser();
            root.jjtAccept(semanticAnalyser, symbolTable);

            // 3 Address Code

            //FileWriter fw = new FileWriter();
            String filename = args[0].substring(0, args[0].lastIndexOf(".")) + ".ir";
            try {
                PrintStream out = new PrintStream(new FileOutputStream(filename));
                System.setOut(out);
                }
            catch (FileNotFoundException e) {
                e.printStackTrace();
            }
            CodeGenerator codeGenerator = new CodeGenerator();
            root.jjtAccept(codeGenerator, null);
        }

        catch(ParseException e) {
            System.out.println(e.getMessage());
            System.out.println("CCAL Parser: Encountered erros during parse.");
        }
    }

/* Section 4 : The grammar */
  static final public SimpleNode Prog() throws ParseException {
                           /*@bgen(jjtree) Prog */
  Prog jjtn000 = new Prog(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclarationList();
      FunctionList();
      Main();
                                              jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
                                             {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void DeclarationList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
    case CONSTANT:
      Declaration();
      jj_consume_token(SEMICOLON);
      DeclarationList();
      break;
    default:
      jj_la1[0] = jj_gen;

    }
  }

  static final public void Declaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
      VariableDeclaration();
      break;
    case CONSTANT:
      ConstantDeclaration();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void VariableDeclaration() throws ParseException {
                                      /*@bgen(jjtree) VarDec */
                                      VarDec jjtn000 = new VarDec(JJTVARDEC);
                                      boolean jjtc000 = true;
                                      jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VARIABLE);
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.value = t.image;
        symbolTable.put(id, type, "var", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public String Identifier() throws ParseException {
                           /*@bgen(jjtree) Id */
                           Id jjtn000 = new Id(JJTID);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
              jjtn000.value = t.image; {if (true) return t.image;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ConstantDeclaration() throws ParseException {
                                        /*@bgen(jjtree) ConstDec */
                                        ConstDec jjtn000 = new ConstDec(JJTCONSTDEC);
                                        boolean jjtc000 = true;
                                        jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(CONSTANT);
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      jj_consume_token(ASSIGNMENT);
      Expression();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.value = t.image;
        symbolTable.put(id, type, "const", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void FunctionList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
    case BOOLEAN:
    case VOID:
      Function();
      FunctionList();
      break;
    default:
      jj_la1[2] = jj_gen;

    }
  }

  static final public void Function() throws ParseException {
                             /*@bgen(jjtree) Function */
                             Function jjtn000 = new Function(JJTFUNCTION);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t; String type; String id;
    try {
      type = Type();
      id = Identifier();
                                      symbolTable.put(id, type, "function", scope);

    if(!scope.equals("global")) {
        symbolTable.put(id, type, "function", "global");
        }
     scope = id;
      jj_consume_token(LBRACKET);
      ParameterList();
      jj_consume_token(RBRACKET);
      jj_consume_token(IS);
      DeclarationList();
      jj_consume_token(BEGIN);
      StatementBlock();
      jj_consume_token(RETURN);
      jj_consume_token(LBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LBRACKET:
      case MINUS:
      case NUM:
      case ID:
        Expression();
        break;
      default:
        jj_la1[3] = jj_gen;

      }
      jj_consume_token(RBRACKET);
                                                         Return jjtn001 = new Return(JJTRETURN);
                                                         boolean jjtc001 = true;
                                                         jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
                                                         if (jjtc001) {
                                                           jjtree.closeNodeScope(jjtn001, true);
                                                         }
      }
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void FunctionReturn() throws ParseException {
                         Token t;
    jj_consume_token(RETURN);
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LBRACKET:
    case MINUS:
    case NUM:
    case ID:
      Expression();
      break;
    default:
      jj_la1[4] = jj_gen;

    }
    jj_consume_token(RBRACKET);
    jj_consume_token(SEMICOLON);
  }

  static final public String Type() throws ParseException {
                       /*@bgen(jjtree) Type */
                       Type jjtn000 = new Type(JJTTYPE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        t = jj_consume_token(INTEGER);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   jjtn000.value = t.image; {if (true) return t.image;}
        break;
      case BOOLEAN:
        t = jj_consume_token(BOOLEAN);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.value = t.image; {if (true) return t.image;}
        break;
      case VOID:
        t = jj_consume_token(VOID);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 jjtn000.value = t.image; {if (true) return t.image;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ParameterList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      NonEmptyParameterList();
      break;
    default:
      jj_la1[6] = jj_gen;

    }
  }

  static final public void NonEmptyParameterList() throws ParseException {
                                                   /*@bgen(jjtree) #ParameterList(> 1) */
                                                   ParameterList jjtn000 = new ParameterList(JJTPARAMETERLIST);
                                                   boolean jjtc000 = true;
                                                   jjtree.openNodeScope(jjtn000);String id; String type;
    try {
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      NonEmptyParameterList2();
      jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
      jjtc000 = false;
      symbolTable.put(id, type, "param", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
      }
    }
  }

  static final public void NonEmptyParameterList2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      NonEmptyParameterList();
      break;
    default:
      jj_la1[7] = jj_gen;

    }
  }

  static final public void Main() throws ParseException {
                     /*@bgen(jjtree) Main */
  Main jjtn000 = new Main(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
     scope = "main";
      jj_consume_token(MAIN);
      jj_consume_token(BEGIN);
      DeclarationList();
      StatementBlock();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void StatementBlock() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case BEGIN:
    case SKP:
    case ID:
      Statement();
      StatementBlock();
      break;
    default:
      jj_la1[8] = jj_gen;

    }
  }

  static final public void Statement() throws ParseException {
                               /*@bgen(jjtree) Statement */
                               Statement jjtn000 = new Statement(JJTSTATEMENT);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        Identifier();
        Statement2();
        break;
      case BEGIN:
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
        break;
      case IF:
        t = jj_consume_token(IF);
        Condition();
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
        jj_consume_token(ELSE);
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
                                                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                                                 jjtc000 = false;
                                                                                                jjtn000.value = t.image;
        break;
      case WHILE:
        t = jj_consume_token(WHILE);
        Condition();
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
                                                              jjtree.closeNodeScope(jjtn000, true);
                                                              jjtc000 = false;
                                                             jjtn000.value = t.image;
        break;
      case SKP:
        jj_consume_token(SKP);
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/* took out the choice conflict here of <ID> */
  static final public void Statement2() throws ParseException {
                     Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGNMENT:
      t = jj_consume_token(ASSIGNMENT);
      Expression();
      jj_consume_token(SEMICOLON);
                                                Assign jjtn001 = new Assign(JJTASSIGN);
                                                boolean jjtc001 = true;
                                                jjtree.openNodeScope(jjtn001);
      try {
                                                jjtree.closeNodeScope(jjtn001, true);
                                                jjtc001 = false;
                                               jjtn001.value = t.image;
      } finally {
                                                if (jjtc001) {
                                                  jjtree.closeNodeScope(jjtn001, true);
                                                }
      }
      break;
    case LBRACKET:
      t = jj_consume_token(LBRACKET);
      ArgList();
      jj_consume_token(RBRACKET);
                                          FuncAssign jjtn002 = new FuncAssign(JJTFUNCASSIGN);
                                          boolean jjtc002 = true;
                                          jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(SEMICOLON);
      } finally {
                                          if (jjtc002) {
                                            jjtree.closeNodeScope(jjtn002, true);
                                          }
      }
      break;
    default:
      jj_la1[10] = jj_gen;

    }
  }

  static final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case MINUS:
    case NUM:
    case ID:
      Fragment();
      Fragment2();
      break;
    case LBRACKET:
      jj_consume_token(LBRACKET);
      Expression();
      jj_consume_token(RBRACKET);
      Fragment2();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Fragment2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case PLUS:
      BinaryOperator();
      Expression();
      break;
    default:
      jj_la1[12] = jj_gen;

    }
  }

  static final public void BinaryOperator() throws ParseException {
                         Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      t = jj_consume_token(PLUS);
                 PlusOp jjtn001 = new PlusOp(JJTPLUSOP);
                 boolean jjtc001 = true;
                 jjtree.openNodeScope(jjtn001);
      try {
                 jjtree.closeNodeScope(jjtn001, true);
                 jjtc001 = false;
                jjtn001.value = t.image;
      } finally {
                 if (jjtc001) {
                   jjtree.closeNodeScope(jjtn001, true);
                 }
      }
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
                  MinusOp jjtn002 = new MinusOp(JJTMINUSOP);
                  boolean jjtc002 = true;
                  jjtree.openNodeScope(jjtn002);
      try {
                  jjtree.closeNodeScope(jjtn002, true);
                  jjtc002 = false;
                 jjtn002.value = t.image;
      } finally {
                  if (jjtc002) {
                    jjtree.closeNodeScope(jjtn002, true);
                  }
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Fragment() throws ParseException {
                   Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
              MinusOp jjtn001 = new MinusOp(JJTMINUSOP);
              boolean jjtc001 = true;
              jjtree.openNodeScope(jjtn001);
      try {
        Identifier();
      } catch (Throwable jjte001) {
              if (jjtc001) {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte001 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte001;}
              }
              if (jjte001 instanceof ParseException) {
                {if (true) throw (ParseException)jjte001;}
              }
              {if (true) throw (Error)jjte001;}
      } finally {
              if (jjtc001) {
                jjtree.closeNodeScope(jjtn001, true);
              }
      }
      break;
    case NUM:
      t = jj_consume_token(NUM);
                Num jjtn002 = new Num(JJTNUM);
                boolean jjtc002 = true;
                jjtree.openNodeScope(jjtn002);
      try {
                jjtree.closeNodeScope(jjtn002, true);
                jjtc002 = false;
               jjtn002.value = t.image;
      } finally {
                if (jjtc002) {
                  jjtree.closeNodeScope(jjtn002, true);
                }
      }
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
                 BoolOp jjtn003 = new BoolOp(JJTBOOLOP);
                 boolean jjtc003 = true;
                 jjtree.openNodeScope(jjtn003);
      try {
                 jjtree.closeNodeScope(jjtn003, true);
                 jjtc003 = false;
                jjtn003.value = t.image;
      } finally {
                 if (jjtc003) {
                   jjtree.closeNodeScope(jjtn003, true);
                 }
      }
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
                  BoolOp jjtn004 = new BoolOp(JJTBOOLOP);
                  boolean jjtc004 = true;
                  jjtree.openNodeScope(jjtn004);
      try {
                  jjtree.closeNodeScope(jjtn004, true);
                  jjtc004 = false;
                 jjtn004.value = t.image;
      } finally {
                  if (jjtc004) {
                    jjtree.closeNodeScope(jjtn004, true);
                  }
      }
      break;
    case ID:
      FuncReturn jjtn005 = new FuncReturn(JJTFUNCRETURN);
      boolean jjtc005 = true;
      jjtree.openNodeScope(jjtn005);
      try {
        t = jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          jj_consume_token(LBRACKET);
          ArgList();
          jj_consume_token(RBRACKET);
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
                                                  jjtree.closeNodeScope(jjtn005, true);
                                                  jjtc005 = false;
                                                 jjtn005.value = t.image;
      } catch (Throwable jjte005) {
      if (jjtc005) {
        jjtree.clearNodeScope(jjtn005);
        jjtc005 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte005 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte005;}
      }
      if (jjte005 instanceof ParseException) {
        {if (true) throw (ParseException)jjte005;}
      }
      {if (true) throw (Error)jjte005;}
      } finally {
      if (jjtc005) {
        jjtree.closeNodeScope(jjtn005, true);
      }
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Condition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TILDE:
      jj_consume_token(TILDE);
      Condition();
      Condition2();
      break;
    default:
      jj_la1[16] = jj_gen;
      if (jj_2_1(3)) {
        jj_consume_token(LBRACKET);
        Condition();
        jj_consume_token(RBRACKET);
        Condition2();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case LBRACKET:
        case MINUS:
        case NUM:
        case ID:
          Expression();
          ComparisonOp();
          Condition2();
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void ComparisonOp() throws ParseException {
                                  /*@bgen(jjtree) Comparison */
                                  Comparison jjtn000 = new Comparison(JJTCOMPARISON);
                                  boolean jjtc000 = true;
                                  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
        t = jj_consume_token(EQUALS);
        Expression();
                                EQComp jjtn001 = new EQComp(JJTEQCOMP);
                                boolean jjtc001 = true;
                                jjtree.openNodeScope(jjtn001);
        try {
                                jjtree.closeNodeScope(jjtn001, true);
                                jjtc001 = false;
                               jjtn001.value = t.image;
        } finally {
                                if (jjtc001) {
